import outdent from 'outdent';
import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'a { margin: 1px; }',
		'a { margin: 1px 2px; }',
		'a { margin: 1px 2px 3px; }',
		'a { margin: 1px 2px 3px 2px; }',
		'a { padding: 1px 2px 3px 2px; }',
		'a { border-width: 1px 2px 3px 2px; }',
		'a { scroll-margin: 1px 2px 3px 2px; }',
		'a { scroll-padding: 1px 2px 3px 2px; }',
		'a { inset: 1px 2px 3px 2px; }',
		'a { border-radius: 4px / 4px; }',
		'a { border-radius: 1px 2px 3px 4px; }',
		'a { border-radius: 1px 2px / 3px 4px; }',
		'a { border-radius: 1px 1px / 2px / 3px; }',
		'a { border-radius: var(--radius) var(--radius); }',
		'a { place-content: first baseline start; }',
		'a { place-content: baseline baseline; }',
		'a { place-items: safe center; }',
		'a { place-self: safe center; }',
		'a { margin: var(--margin) var(--margin); }',
		'a { margin: 1px var(--margin) 1px; }',
		'a { margin: calc(var(--margin) + 1px) calc(var(--margin) + 1px); }',
		'a { margin: calc(attr(data-spacing type(*)) + 0px) calc(attr(data-spacing type(*)) + 0px); }',
		'a { margin: calc(inherit(--spacing) + 0px) calc(inherit(--spacing) + 0px); }',
		String.raw`a { margin: calc(r\41 NDOM(0px, 10px) + 0px) calc(r\41 NDOM(0px, 10px) + 0px); }`,
		'a { margin: calc(random-item(auto, 1px, 2px) + 0px) calc(random-item(auto, 1px, 2px) + 0px); }',
		'a { margin: calc(--spacing() + 0px) calc(--spacing() + 0px); }',
		'a { margin: calc(1px + 1px) CALC(1px + 1px); }',
		'a { margin: 1px 1.0px; }',
		'a { margin: inherit inherit; }',
		'a { margin: 1px 1px 1px 1px 1px; }',
		'a { border-spacing: 1px 1px; }',
		'a { background-repeat: repeat repeat; }',
		'a { --margin: 1px 1px; }',
		// CSS Modules interop blocks are read by JavaScript as exact strings.
		':export { margin: 1px 1px; padding: 1px 2px 1px 2px; }',
		':import("./theme.css") { margin: 1px 1px; }',
	],
	invalid: [
		'a { margin: 1px 1px; }',
		'a { margin: 100% 100%; }',
		'a { margin: 1px 1px 1px; }',
		'a { margin: 1px 2px 1px; }',
		'a { margin: 1px 1px 1px 1px; }',
		'a { margin: 1px 2px 1px 2px; }',
		'a { padding: 1px 1px; }',
		'a { border-color: red red; }',
		'a { border-color: #ABC #abc; }',
		'a { border-style: solid solid; }',
		'a { border-width: 1px 1px; }',
		'a { scroll-margin: 1px 1px; }',
		'a { scroll-padding: 1px 1px; }',
		'a { inset: 1px 1px; }',
		'a { margin-block: 1px 1px; }',
		'a { margin-inline: 1px 1px; }',
		'a { padding-block: 1px 1px; }',
		'a { padding-inline: 1px 1px; }',
		'a { border-block-color: red red; }',
		'a { border-block-style: solid solid; }',
		'a { border-block-width: 1px 1px; }',
		'a { border-inline-color: red red; }',
		'a { border-inline-style: solid solid; }',
		'a { border-inline-width: 1px 1px; }',
		'a { scroll-margin-block: 1px 1px; }',
		'a { scroll-margin-inline: 1px 1px; }',
		'a { scroll-padding-block: 1px 1px; }',
		'a { scroll-padding-inline: 1px 1px; }',
		'a { inset-block: 1px 1px; }',
		'a { inset-inline: 1px 1px; }',
		'a { gap: 1px 1px; }',
		'a { grid-gap: 1px 1px; }',
		'a { overflow: auto auto; }',
		'a { overscroll-behavior: contain contain; }',
		'a { border-radius: 1px 1px 1px 1px; }',
		'a { border-radius: 1px 2px 3px 2px; }',
		'a { border-radius: 1px 1px / 2px 2px; }',
		'a { border-radius: 1px 1px / 2px 3px; }',
		'a { border-radius: 1px 2px / 3px 3px; }',
		'a { border-radius: 1px 1px 1px 1px / 2px 2px 2px 2px; }',
		'a { border-radius: 1px 2px 3px 2px / 4px 5px 6px 5px; }',
		'a { border-radius: 1px 1px / 2px /* prevent fix */ 2px; }',
		'a { -webkit-border-radius: 1px 1px; }',
		'a { place-content: center center; }',
		'a { place-items: center center; }',
		'a { place-self: center center; }',
		'a { place-content: safe center safe center; }',
		'a { place-items: first baseline first baseline; }',
		'a { margin: calc(1px + 1px) calc(1px + 1px); }',
		'a { margin: calc(1px + 1px) calc( 1px + 1px ); }',
		'a { MARGIN: 1PX 1px; }',
		String.raw`a { m\61 rgin: auto AUTO; }`,
		'a { margin: 1px 1px !important; }',
		'a { margin: /* keep */ 1px 1px; }',
		'a { margin: 1px /* keep */ 2px 1px; }',
		'a { margin: 1px /* prevent fix */ 1px; }',
		'a { margin: 1px 1px /* keep */; }',
		outdent`
			a {
				margin:
					1px
					1px;
			}
		`,
		'.parent { @media (width > 0px) { margin: 1px 1px; } }',
		'.a:export { margin: 1px 1px; }',
	],
});

test({
	valid: [],
	invalid: [
		{
			code: 'a {\r\n\tmargin: 1px 1px;\r\n}',
			output: 'a {\r\n\tmargin: 1px;\r\n}',
			errors: [{messageId: 'no-redundant-shorthand-values'}],
		},
	],
});
